Updated for configurable visualizer, port offset approach, and running without maven build.